# postulantes-curso

./: .env.example  .gitignore  apuntes-clase1.ipynb  main.py  pyproject.toml
src/core/: api.py  config.py  database.py  dependencies.py  enums.py  mapping_database.py  response_model.py
src/modules/auth/: controller.py  routes.py  services.py
src/modules/health/: controllers.py  routes.py
src/modules/product/: controller.py  model.py  routes.py  schemas.py  services.py
src/modules/user/: controller.py  model.py  routes.py  schemas.py  services.py
